@@ -1,4 +1,8 @@
 
+2007-10-07  Roland Clobus <rclobus@bigfoot.com>
+	* common/state.c: Purge cache when disconnecting.
+	* server/player.c: Cached players must receive broadcasts.
+
 2007-10-03  Roland Clobus <rclobus@bigfoot.com>
 	* configure.ac, server/server.c: Use sigaction instead signal.
 
